# long-horizon-agentic-harness

./: .gitignore  H40-RESEARCH-TASK.md  LICENSE  PINNED-CC.md  PRIOR-ART-SUSPECT.md  PROVENANCE.md  README.md  conftest.py  pyproject.toml
design/: ARCHITECTURE.md  BEHAVIOURAL-VALIDATION.md  COMMUNICATION.md  DAEMON.md  DECOMPOSITION-METHODOLOGY.md  DESIGN-PRINCIPLES.md  DOC-SYSTEM.md  DOCUMENT-HIERARCHY.md  GIT-INTEGRATION.md  GUI-DESIGN.md  IMPROVEMENT-WORKSPACE.md  INDEX.md  INTAKE-TO-DELIVERY.md  NOTES.md  OBSERVABILITY.md  PLAN-ALIGNMENT-GATE.md  PROJECT-GUIDE.md  PROJECT-PLANNING.md  QUALITY-GATE.md  ROADMAP.md  ROLE-RESOLUTION.md  SCALE.md  SECURITY.md  TRANSPORTS.md  VISION.md  WATCHDOG.md  WORKSPACE-SCHEMA.md  workflow-diagram.html
dry-run/: gate-report.md  log.md
harnessd/: IMPLEMENTATION-PLAN.md  __init__.py  addressing.py  clock.py  commissioning.py  config.py  daemon.py  detector.py  detector_signals.py  executor.py  fencing.py  genesis.py  harnessctl.py  ipc.py  ledger.py  necro.py  pieces_present.py  promote.py  reconcile.py  return_contract.py  states.py  store.py  validate.py  watchdog.py
tests/: test_addressing.py  test_brief.py  test_brief_derivation.py  test_cc_config.py  test_chokepoint.py  test_claude_adapter.py  test_clock.py  test_collapse_result.py  test_commissioning.py  test_config.py  test_control_plane_hardening.py  test_daemon.py  test_daemon_assembly.py  test_detector.py  test_detector_signals.py  test_doc_blocks.py  test_escalation_freshness.py  test_executor.py  test_f18_session_key.py  test_failure_taxonomy.py  test_fencing.py  (+62 more)
(+464 files in other folders)
